--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Portfolio | Flat Theme</title>
+    <title>Mes créations | DJmaxZPL4Y</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -35,26 +35,11 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li class="active"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="career.html">Career</a></li>
-                            <li><a href="blog-item.html">Blog Single</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>
-                            <li class="divider"></li>
-                            <li><a href="privacy.html">Privacy Policy</a></li>
-                            <li><a href="terms.html">Terms of Use</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="blog.html">Blog</a></li> 
-                    <li><a href="contact-us.html">Contact</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="a-propos.html">A propos de moi</a></li>
+                    <li><a href="services.html">Mes services</a></li>
+                    <li class="active"><a href="portfolio.html">Mes créations</a></li>
+                    <li><a href="contacter.html">Me contacter</a></li>
                 </ul>
             </div>
         </div>
@@ -64,13 +49,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1>Portfolio</h1>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+                    <h1>Mes créations</h1>
+                    <p>Voici toutes les créations que j'ai pu programmer</p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="breadcrumb pull-right">
-                        <li><a href="index.html">Home</a></li>
-                        <li class="active">Portfolio</li>
+                        <li><a href="index.html">DJmaxZPL4Y</a></li>
+                        <li class="active">Mes créations</li>
                     </ul>
                 </div>
             </div>
@@ -79,64 +64,38 @@
 
     <section id="portfolio" class="container">
         <ul class="portfolio-filter">
-            <li><a class="btn btn-default active" href="#" data-filter="*">All</a></li>
-            <li><a class="btn btn-default" href="#" data-filter=".bootstrap">Bootstrap</a></li>
-            <li><a class="btn btn-default" href="#" data-filter=".html">HTML</a></li>
-            <li><a class="btn btn-default" href="#" data-filter=".wordpress">Wordpress</a></li>
+            <li><a class="btn btn-default active" href="#" data-filter="*">Tous</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".logiciel">Logiciels</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".java">JAVA</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".plugins">Plugins Minecraft</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".launchers">Launchers Minecraft</a></li>
         </ul><!--/#portfolio-filter-->
 
         <ul class="portfolio-items col-3">
-            <li class="portfolio-item apps">
+            <li class="portfolio-item java logiciel">
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item1.jpg" alt="">
-                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <img src="images/portfolio/thumb/tournoi-belote.jpg" alt="">
+                    <h5>Tournoi Belote</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item1.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>             
+                        <a class="preview btn btn-danger" href="images/portfolio/full/tournoi-belote.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>             
                     </div>           
                 </div>           
             </li><!--/.portfolio-item-->
-            <li class="portfolio-item joomla bootstrap">
+            <li class="portfolio-item java plugins">
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item2.jpg" alt="">
-                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <img src="images/portfolio/thumb/europapark-minecraft.jpg" alt="">
+                    <h5>Plugins pour le serveur EuropaPark - Minecraft</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item2.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>              
+                        <a class="preview btn btn-danger" href="images/portfolio/full/europapark-minecraft.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>              
                     </div>           
                 </div>           
             </li><!--/.portfolio-item-->
-            <li class="portfolio-item bootstrap wordpress">
+            <li class="portfolio-item java plugins">
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item3.jpg" alt="">
-                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <img src="images/portfolio/thumb/thewalkingcraft.jpg" alt="">
+                    <h5>Plugins pour le serveur TheWalkingCraft</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item3.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>        
-                    </div>           
-                </div>           
-            </li><!--/.portfolio-item-->
-            <li class="portfolio-item joomla wordpress apps">
-                <div class="item-inner">
-                    <img src="images/portfolio/thumb/item4.jpg" alt="">
-                    <h5>Lorem ipsum dolor sit amet</h5>
-                    <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item4.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>          
-                    </div>           
-                </div>           
-            </li><!--/.portfolio-item-->
-            <li class="portfolio-item joomla html">
-                <div class="item-inner">
-                    <img src="images/portfolio/thumb/item5.jpg" alt="">
-                    <h5>Lorem ipsum dolor sit amet</h5>
-                    <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item5.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>          
-                    </div>    
-                </div>       
-            </li><!--/.portfolio-item-->
-            <li class="portfolio-item wordpress html">
-                <div class="item-inner">
-                    <img src="images/portfolio/thumb/item6.jpg" alt="">
-                    <h5>Lorem ipsum dolor sit amet</h5>
-                    <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item6.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                        <a class="preview btn btn-danger" href="images/portfolio/full/thewalkingcraft.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>        
                     </div>           
                 </div>           
             </li><!--/.portfolio-item-->
