Commit from the 25 februar

--- a/a-propos.html
+++ b/a-propos.html
@@ -35,7 +35,6 @@
                     <li class="active"><a href="a-propos.html">A propos de moi</a></li>
                     <li><a href="services.html">Mes services</a></li>
                     <li><a href="portfolio.html">Mes créations</a></li>
-                    <li><a href="contacter.html">Me contacter</a></li>
                 </ul>
             </div>
         </div>
@@ -45,13 +44,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1>About Us</h1>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+                    <h1>A propos de moi</h1>
+                    <p>Vous saurez après avoir lu cette page, l'essentiel sur moi</p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="breadcrumb pull-right">
-                        <li><a href="index.html">Home</a></li>
-                        <li class="active">About Us</li>
+                        <li><a href="index.html">DJmaxZPL4Y</a></li>
+                        <li class="active">A propos de moi</li>
                     </ul>
                 </div>
             </div>
@@ -61,35 +60,30 @@
     <section id="about-us" class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2>What we are</h2>
-                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+                <h2>Je me présente</h2>
+                <p>DJmaxZPL4Y sous le vrai nom de ZUMSTEIN Maxime, je suis un jeune développeur passioné de 16 ans. Ayant commencé à apprendre le HTML ainsi que le CSS lorsque j'avais seulement une douzaine d'année je me suis orienté vers le language JAVA en créant mes premiers plugins sur le célèbre jeu composé uniquement de cubes intitulé Minecraft. Depuis ce moment j'ai découvert une vraie passion pour l'informatique et plus particulièrement le développement sous JAVA. Je décide donc de mettre mais connaissances sur internet afin de vous proposer de créer ce dont vous avez besoin. Toutes mes créations sont gratuites puisque je les fais dans le but de m'améliorer. Alors n'hésitez pas à passer sur la page <b><a href="">Mes services</a></b> si vous avez besoin d'un logiciel, de plugins Minecraft ou même d'un site web.</p>
             </div><!--/.col-sm-6-->
             <div class="col-sm-6">
-                <h2>Our Skills</h2>
+                <h2>Mes connaissances</h2>
                 <div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                            <span>JAVA</span>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                             <span>HTML/CSS</span>
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-                            <span>Wordpress</span>
-                        </div>
-                    </div>
-                    <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-                            <span>Joomla</span>
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;">
-                            <span>Drupal</span>
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
                             <span>PHP</span>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
+                            <span>C++</span>
                         </div>
                     </div>
                 </div>
@@ -97,42 +91,16 @@
         </div><!--/.row-->
 
         <div class="gap"></div>
-        <h1 class="center">Meet the Team</h1>
-        <p class="lead center">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        <h1 class="center">DJmaxZPL4Y</h1>
+        <p class="lead center">Les différents sites où vous pouvez me retrouver.</p>
         <div class="gap"></div>
 
         <div id="meet-the-team" class="row">
-            <div class="col-md-3 col-xs-6">
+            <div class="col-md-12">
                 <div class="center">
                     <p><img class="img-responsive img-thumbnail img-circle" src="images/team-member.jpg" alt="" ></p>
-                    <h5>David J. Robbins<small class="designation muted">Senior Vice President</small></h5>
-                    <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor.</p>
-                    <a class="btn btn-social btn-facebook" href="#"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="icon-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="icon-linkedin"></i></a>
-                </div>
-            </div>
-
-            <div class="col-md-3 col-xs-6">
-                <div class="center">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team-member.jpg" alt="" ></p>
-                    <h5>David J. Robbins<small class="designation muted">Senior Vice President</small></h5>
-                    <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor.</p>
-                    <a class="btn btn-social btn-facebook" href="#"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="icon-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="icon-linkedin"></i></a>
-                </div>
-            </div>        
-            <div class="col-md-3 col-xs-6">
-                <div class="center">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team-member.jpg" alt="" ></p>
-                    <h5>David J. Robbins<small class="designation muted">Senior Vice President</small></h5>
-                    <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor.</p>
-                    <a class="btn btn-social btn-facebook" href="#"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="icon-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="icon-linkedin"></i></a>
-                </div>
-            </div>        
-            <div class="col-md-3 col-xs-6">
-                <div class="center">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team-member.jpg" alt="" ></p>
-                    <h5>David J. Robbins<small class="designation muted">Senior Vice President</small></h5>
-                    <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor.</p>
-                    <a class="btn btn-social btn-facebook" href="#"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="icon-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="icon-linkedin"></i></a>
+                    <br>
+                    <a class="btn btn-social btn-facebook" href="https://www.facebook.com/djmaxzplay/"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-twitter" href="https://twitter.com/DJmaxZPLAY"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-github" href="https://github.com/DJmaxZPL4Y/"><i class="icon-github"></i></a>
                 </div>
             </div>
         </div><!--/#meet-the-team-->
@@ -223,14 +191,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    &copy; 2015 DJmaxZPL4Y | Template de <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. Tous droits réservés.
                 </div>
                 <div class="col-sm-6">
-                    <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                    <ul class="pull-right">                
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="a-propos.html">A propos de moi</a></li>
+                        <li><a href="services.html">Mes services</a></li>
+                        <li><a href="portfolio.html">Mes créations</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
                 </div>
