--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                     <li><a href="a-propos.html">A propos de moi</a></li>
                     <li><a href="services.html">Mes services</a></li>
                     <li><a href="portfolio.html">Mes créations</a></li>
-                    <li><a href="contacter.html">Me contacter</a></li>
                 </ul>
             </div>
         </div>
@@ -45,16 +44,17 @@
             <ol class="carousel-indicators">
                 <li data-target="#main-slider" data-slide-to="0" class="active"></li>
                 <li data-target="#main-slider" data-slide-to="1"></li>
-                <li data-target="#main-slider" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="item active" style="background-image: url(images/slider/bg1.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="carousel-content centered">
+                                <div class="carousel-content center centered">
                                     <h2 class="boxed animation animated-item-1">Bienvenue sur le site de DJmaxZPL4Y | Welcome to the website of DJmaxZPL4Y</h2>
                                     <p class="boxed animation animated-item-2">Jeune développeur âgé d'à peine 16 ans.</p>
+                                    <br>
+                                    <a class="btn btn-md animation animated-item-3" href="a-propos.html">En savoir plus sur moi</a>
                                 </div>
                             </div>
                         </div>
@@ -64,31 +64,10 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="carousel-content center centered">
-                                    <h2 class="boxed animation animated-item-1">Clean, Crisp, Powerful and Responsive Web Design</h2>
-                                    <p class="boxed animation animated-item-2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                                <div class="carousel-content center">
+                                    <h2 class="boxed animation animated-item-1">Si vous voulez en savoir plus sur moi</h2>
                                     <br>
-                                    <a class="btn btn-md animation animated-item-3" href="#">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div><!--/.item-->
-                <div class="item" style="background-image: url(images/slider/bg3.jpg)">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="carousel-content centered">
-                                    <h2 class="animation animated-item-1">Powerful and Responsive Web Design Theme</h2>
-                                    <p class="animation animated-item-2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames</p>
-                                    <a class="btn btn-md animation animated-item-3" href="#">Learn More</a>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="centered">
-                                    <div class="embed-container">
-                                        <iframe src="//player.vimeo.com/video/69421653?title=0&amp;byline=0&amp;portrait=0&amp;color=a22c2f" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                                    </div>
+                                    <h2 class="boxed animation animated-item-2"><a class="btn btn-md animation animated-item-1" href="a-propos.html">Cliquez ici</a></h2>
                                 </div>
                             </div>
                         </div>
@@ -149,12 +128,8 @@
             <div class="row">
                 <div class="col-md-3">
                     <h3>Mes dernières créations</h3>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                    <div class="btn-group">
-                        <a class="btn btn-danger" href="#scroller" data-slide="prev"><i class="icon-angle-left"></i></a>
-                        <a class="btn btn-danger" href="#scroller" data-slide="next"><i class="icon-angle-right"></i></a>
-                    </div>
-                    <p class="gap"></p>
+                    <p>Voici mes 3 dernières créations réalisées.<br><br>Vous pouvez voir toutes mes créations en cliquant <a href="portfolio.html">ici</a></p>
+                    
                 </div>
                 <div class="col-md-9">
                     <div id="scroller" class="carousel slide">
@@ -169,7 +144,7 @@
                                                     Tournoi - Belote
                                                 </h5>
                                                 <div class="overlay">
-                                                    <a class="preview btn btn-danger" title="Logiciel qui gère des tournois de Belote pour le club Randonneurs de la Moder" href="images/portfolio/full/tournoi-belote.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
+                                                    <a class="preview btn btn-danger" title="Logiciel qui gère des tournois de belote pour le club Randonneurs de la Moder" href="images/portfolio/full/tournoi-belote.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -182,7 +157,7 @@
                                                     Plugins TheWalkingCraft
                                                 </h5>
                                                 <div class="overlay">
-                                                    <a class="preview btn btn-danger" title="Malesuada fames ac turpis egestas" href="thewalkingcraft.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
+                                                    <a class="preview btn btn-danger" title="Création de plugins spigot pour le serveur TheWalkingCraft" href="images/portfolio/full/thewalkingcraft.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -195,7 +170,7 @@
                                                     Plugins Europapark - Minecraft
                                                 </h5>
                                                 <div class="overlay">
-                                                    <a class="preview btn btn-danger" title="Malesuada fames ac turpis egestas" href="images/portfolio/full/europapark-minecraft.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
+                                                    <a class="preview btn btn-danger" title="Création de plugins spigot essentiels pour le bon fonctionnement du serveur Europapark - Minecraft" href="images/portfolio/full/europapark-minecraft.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -209,7 +184,7 @@
             </div><!--/.row-->
         </div>
     </section><!--/#recent-works-->
-
+    <!--
     <section id="testimonial" class="alizarin">
         <div class="container">
             <div class="row">
@@ -244,7 +219,8 @@
                 </div>
             </div>
         </div>
-    </section><!--/#testimonial-->
+    </section><!--/#testimonial-->-->
+    
 
     <section id="bottom" class="wet-asphalt">
         <div class="container">
@@ -331,14 +307,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    &copy; 2015 DJmaxZPL4Y | Template de <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. Tous droits réservés.
                 </div>
                 <div class="col-sm-6">
-                    <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                    <ul class="pull-right">                
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="a-propos.html">A propos de moi</a></li>
+                        <li><a href="services.html">Mes services</a></li>
+                        <li><a href="portfolio.html">Mes créations</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
                 </div>
