--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,6 @@
                     <li><a href="a-propos.html">A propos de moi</a></li>
                     <li><a href="services.html">Mes services</a></li>
                     <li class="active"><a href="portfolio.html">Mes créations</a></li>
-                    <li><a href="contacter.html">Me contacter</a></li>
                 </ul>
             </div>
         </div>
@@ -183,14 +182,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    &copy; 2015 DJmaxZPL4Y | Template de <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. Tous droits réservés.
                 </div>
                 <div class="col-sm-6">
-                    <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                    <ul class="pull-right">                
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="a-propos.html">A propos de moi</a></li>
+                        <li><a href="services.html">Mes services</a></li>
+                        <li><a href="portfolio.html">Mes créations</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
                 </div>
